--- a/index.html
+++ b/index.html
@@ -47,21 +47,7 @@
         <nav class="nav-links" id="nav-links">
           <ul>
             <li><a href="index.html" class="nav-link">BERANDA</a></li>
-            <li><a href="dashboard.html" class="nav-link" id="dashboard">DATA</a></li>
-            <li>
-              <a class="nav-link"></a>
-              <div class="dropdown">
-                <span>ABOUT US </span>
-                <img
-                  src="assets/images/dropdown.png"
-                  alt="icon dropdown"
-                  class="icon-dropdown"
-                />
-              </div>
-            </li>
-            <li>
-              </div>
-            </li>
+            <li><a href="charts.html" class="nav-link" id="dashboard">DATA</a></li>
           </ul>
         </nav>
       </div>
@@ -81,7 +67,7 @@
         Melalui Sijagat, kami berkomitmen untuk menjaga nilai-nilai adat istiadat Majannang sambil mendukung kemajuan desa dengan teknologi.
       </p>
       <button class="more-info-button">
-        <a href="#" id="button-dash">Lets Go</a>
+        <a href="charts.html" id="button-dash">Lets Go</a>
       </button>
     </section>
     <div class="spacer-header">
@@ -415,14 +401,14 @@
           <div class="contact-info-content">
             <p class="copyright"></p>
             <div class="contact-details">
-              <span class="phone">Phone : +(62) 8123 4567 890</span><br />
-              <span class="email">info@mavenroastersco.com</span>
+              <span class="Instagram">kknt_desa_majannang</span><br />
+              <span class="email">kkntdesamajannang.com</span>
             </div>
           </div>
         </div>
       </div>
       <div id="copyright">
-        <p>Copyright ©2024 Team 20 RevoU SIB 6. All Right Reserved.</p>
+        <p>Copyright ©2024 TIM KKNT DESA MAJANNANG .</p>
       </div>
     </footer>
   </body>
