--- a/charts.html
+++ b/charts.html
@@ -25,7 +25,7 @@
         <div class="sidebar"> 
             <ul>
                 <li> 
-                    <a href="dash.html">
+                    <a href="index.html">
                         <i class="fas fa-th-large"></i>
                         <div>Dashboard</div>
                     </a>
@@ -33,35 +33,6 @@
             </ul>
         </div>
         <div class="main">
-            <div class="cards">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="number" id="card3Number"></div>
-                        <div class="card-name" id="card3Name"></div>
-                    </div>
-                    <div class="icon-box">
-                        <i class="fas fa-user-graduate"></i>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-content">
-                        <div class="number" id="card2Number"></div>
-                        <div class="card-name" id="card2Name"></div>
-                    </div>
-                    <div class="icon-box">
-                        <i class="fas fa-user-graduate"></i>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-content">
-                        <div class="number" id="card1Number"></div>
-                        <div class="card-name" id="card1Name"></div>
-                    </div>
-                    <div class="icon-box">
-                        <i class="fas fa-user-graduate"></i>
-                    </div>
-                </div>
-            </div>
             <div class="charts">
                 <div class="chart" >
                     <h2>Pekerjaan</h2>
